# langchain-test

./: .gitignore  pyproject.toml
app/: chain.py  config.py  controller.py  logger.py  print.py  qa.py  scrape_web.py  service.py  util.py
lang_chain_test/: entry.py
