[tool.poetry]
name = "lang-chain-test"
version = "0.1.0"
description = ""
authors = ["naremloa <naremloa@gmail.com>"]
readme = "README.md"
packages = [{include = "lang_chain_test"}]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.5.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
